// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a set of instructions that describe a rectangle path that is drawn and that then changes state should have recorded everything in the right order 1`] = `
[
  "context.beginPath()",
  "context.moveTo(0,0)",
  "context.lineTo(1,0)",
  "context.lineTo(1,1)",
  "context.lineTo(0,1)",
  "context.lineTo(0,0)",
  "context.closePath()",
  "context.moveTo(0,0)",
  "context.fill()",
  "context.fillStyle = "#f00"",
  "context.fill()",
]
`;

exports[`a set of instructions that is also about a path that describes a path that is drawn, altered and then recreated and then the recreated path changes state should not affect the state of the original 1`] = `
[
  "context.beginPath()",
  "context.moveTo(0,0)",
  "context.lineTo(10,0)",
  "context.lineTo(10,10)",
  "context.lineTo(0,10)",
  "context.fillStyle = "#00f"",
  "context.lineTo(5,5)",
  "context.fill()",
]
`;

exports[`a set of instructions that is also about a path that receives a change of state and then receives an instruction that modifies the path and then receives a change of state on the same property as the previous change of state and then draws the path and receives another change of state on the same property should have recorded three changes of state 1`] = `
[
  "context.beginPath()",
  "context.fillStyle = "#f00"",
  "context.moveTo(0,0)",
  "context.fillStyle = "#00f"",
  "context.fill()",
  "context.fillStyle = "#ff0"",
  "context.fill()",
]
`;

exports[`a set of instructions that is also about a path that receives a change of state and then receives an instruction that modifies the path and then receives a change of state on the same property as the previous change of state should not have replaced the previous change of state 1`] = `
[
  "context.beginPath()",
  "context.fillStyle = "#f00"",
  "context.moveTo(0,0)",
  "context.fillStyle = "#00f"",
  "context.fill()",
]
`;

exports[`a set of instructions that is also about a path that receives a change of state and then receives an instruction that modifies the path should contain an instruction to begin a path, change the state and modify the path 1`] = `
[
  "context.beginPath()",
  "context.fillStyle = "#f00"",
  "context.moveTo(0,0)",
  "context.fill()",
]
`;
